--- a/不算总结的总结.md
+++ b/不算总结的总结.md
@@ -36,6 +36,8 @@ Broadcast,广播变量，用途就是把变量广播出去，发到每一个exec
 
 RDD不能直接广播，毕竟RDD只是一个引用，懒加载的，必须collect起来在广播。
 
+广播变量的数据不可太大，如果太大，会在Executor占用大量的缓存，相对于计算的时候的缓存就少很多。
+
 ？？一般来讲广播一些维度表比较常见？？？我猜的
 
 
@@ -46,9 +48,19 @@ RDD不能直接广播，毕竟RDD只是一个引用，懒加载的，必须colle
 
 集群启动过程
 
+1. 提交任务到master，master启动masterendpoint交互程序，启动onstart方法生成计时器
+2. master调用receive不断接受其他服务的请求和结果
+3. master搜索slave文件，调用脚本启动worker
+4. worker启动workerendpoint，通过onstart方法向所有master进行注册
+5. master收到注册信息后判断自己状态，若是standy，直接忽略信息，若是active，接受注册信息并判断worker是否重复注册，若没有，保存新的worker，并返回注册信息结果
+6. worker收到注册信息的结果后，启动定时器，进行心跳反馈
+
 任务提交（四个阶段）
 
-
+1. RDD生成
+2. stage划分
+3. task生成
+4. 任务提交
 
 
 
@@ -57,6 +69,10 @@ RDD不能直接广播，毕竟RDD只是一个引用，懒加载的，必须colle
 ## Spark SQL
 
 DataFrame/DataSet
+
+- DataFrame是弱类型，是抽象数据集，Rdd和Schema的集合，可以像二维表一样操作
+
+- DataSet：属于DataFrame的父类，DataFrame=Dataset[row]，强类型
 
 RDD到DataFrame的三种方式
 
